--- a/arch/powerpc/configs/xenon_defconfig
+++ b/arch/powerpc/configs/xenon_defconfig
@@ -18,7 +18,6 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 CONFIG_EXPERT=y
 # CONFIG_FHANDLE is not set
-CONFIG_SLAB=y
 CONFIG_PPC64=y
 CONFIG_CELL_CPU=y
 CONFIG_ALTIVEC=y
@@ -38,7 +37,6 @@ CONFIG_KEXEC=y
 CONFIG_SCHED_SMT=y
 CONFIG_KPROBES=y
 # CONFIG_SECCOMP is not set
-# CONFIG_GCC_PLUGINS is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -54,11 +52,11 @@ CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
 # CONFIG_IPV6 is not set
-CONFIG_DNS_RESOLVER=y
 # CONFIG_WIRELESS is not set
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIEAER=y
 CONFIG_PCI_DEBUG=y
+CONFIG_VGA_ARB_MAX_GPUS=1
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_POWERNV=m
 CONFIG_UEVENT_HELPER=y
@@ -68,7 +66,6 @@ CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_CONNECTOR=m
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=m
-CONFIG_BLK_DEV_RAM=y
 CONFIG_ATA_OVER_ETH=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
@@ -106,20 +103,16 @@ CONFIG_SERIAL_XENON_UART_POLL=y
 CONFIG_SERIAL_NONSTANDARD=y
 CONFIG_XENON_SMC=y
 CONFIG_XENON_ANA=y
-CONFIG_XENOS_RB=y
 CONFIG_TTY_PRINTK=y
 # CONFIG_HW_RANDOM is not set
-CONFIG_I2C=m
 CONFIG_I2C_SIS96X=m
+CONFIG_I2C_OPAL=m
 CONFIG_SENSORS_IBMPOWERNV=m
 CONFIG_SENSORS_XENON=y
-CONFIG_VGA_ARB_MAX_GPUS=1
+CONFIG_DRM=y
+CONFIG_DRM_XENOS=y
 CONFIG_FB=y
-CONFIG_FB_FOREIGN_ENDIAN=y
-CONFIG_FB_TILEBLITTING=y
-CONFIG_FB_XENOS=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_LOGO=y
 CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
@@ -149,6 +142,7 @@ CONFIG_HID_TOPSEED=y
 CONFIG_HID_THRUSTMASTER=y
 CONFIG_HID_ZEROPLUS=y
 CONFIG_USB_HIDDEV=y
+CONFIG_I2C_HID=m
 CONFIG_USB=y
 CONFIG_USB_MON=y
 CONFIG_USB_EHCI_HCD=y
@@ -188,34 +182,25 @@ CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_LZO=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V3_ACL=y
+CONFIG_NFS_V4=y
+CONFIG_NFS_SWAP=y
 CONFIG_ROOT_NFS=y
 CONFIG_NFSD=y
-CONFIG_NFSD_V3=y
 CONFIG_NFSD_V3_ACL=y
+CONFIG_NFSD_V4=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
-CONFIG_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity"
-CONFIG_INIT_STACK_NONE=y
-CONFIG_CRYPTO_ECHAINIV=m
-CONFIG_CRYPTO_CBC=y
-CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_DES=y
+CONFIG_CRYPTO_CBC=y
+CONFIG_CRYPTO_ECHAINIV=m
 CONFIG_CRYPTO_ANSI_CPRNG=m
 # CONFIG_CRYPTO_HW is not set
 CONFIG_CRC_ITU_T=y
-CONFIG_FONTS=y
-CONFIG_FONT_8x8=y
-CONFIG_FONT_8x16=y
-CONFIG_FONT_PEARL_8x8=y
-CONFIG_FONT_ACORN_8x8=y
-CONFIG_FONT_MINI_4x6=y
-CONFIG_FONT_SUN8x16=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_MEMORY_INIT=y
@@ -228,5 +213,6 @@ CONFIG_DEBUG_MUTEXES=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_TRACE is not set
 # CONFIG_FTRACE is not set
+# CONFIG_STRICT_DEVMEM is not set
 CONFIG_PPC_DISABLE_WERROR=y
 CONFIG_PPC_EARLY_DEBUG=y
